name:           haskell-exp-parser
version:        0.1
synopsis:       Simple parser parser from Haskell to TemplateHaskell expressions
description:    This package defines a simple parser for a subset of Haskell expressions and patterns to the TemplateHaskell AST.
                .
                It provides a very lightweight alternative to the functions @parseExp@ and @parsePat@ from <http://hackage.haskell.org/package/haskell-src-meta>.
                .
                The following expressions are currently supported:
                .
                * Variables
                * Integer and string literals
                * Prefix function application
                * Lists and tuples
                .
                The following patterns are currently supported:
                .
                * Variables
license:        BSD3
license-file:   LICENSE
author:         Emil Axelsson
maintainer:     emax@chalmers.se
copyright:      Copyright (c) 2015, Emil Axelsson
category:       Language
build-type:     Simple
cabal-version:  >=1.10

library
  exposed-modules:
    Language.Haskell.ParseExp

  build-depends:
      base >=4 && <5,
      template-haskell

  hs-source-dirs: src

  default-language: Haskell2010
